--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="container">
       <div class="header__inner-wrapper">
         <div class="header__nav">
-          <a href="./index.html" class="logo">
+          <a href="./" class="logo">
             <span>WEB</span>STUDIO
           </a>
           <nav class="nav">
             <ul>
-              <li><a href="./index.html" class="active">Studio</a></li>
+              <li><a href="./" class="active">Studio</a></li>
               <li><a href="./portfolio.html">Portfolio</a></li>
               <li><a href="/">Contacts</a></li>
             </ul>
@@ -162,7 +162,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__inner-wrapper">
-        <a href="/index.html" class="logo logo--white">
+        <a href="./" class="logo logo--white">
           <span>WEB</span>STUDIO
         </a>
         <p class="footer__information">
