--- a/index.html
+++ b/index.html
@@ -11,36 +11,40 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header__inner-wrapper">
-        <div class="header__nav">
-          <a href="./" class="logo">
-            <span>WEB</span>STUDIO
-          </a>
-          <nav class="nav">
-            <ul>
-              <li><a href="./" class="active">Studio</a></li>
-              <li><a href="./portfolio.html">Portfolio</a></li>
-              <li><a href="/">Contacts</a></li>
-            </ul>
-          </nav>
-        </div>
-        <address class="contact-information">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </address>
-      </div>
+      <nav class="nav">
+        <a href="./index.html" class="logo">
+          <span>WEB</span>STUDIO
+        </a>
+        <ul>
+          <li><a href="./index.html" class="active">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="/">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="contact-information">
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </div>
   </header>
 
   <main class="main">
     <section class="hero">
-      <h1>
-        Effective Solutions
-        for Your Business
-      </h1>
-      <button type="button" class="button">
-        Order Service
-      </button>
+      <div class="container">
+        <h1>
+          Effective Solutions
+          for Your Business
+        </h1>
+        <button type="button" class="button">
+          Order Service
+        </button>
+      </div>
     </section>
     <section class="decision">
       <div class="container">
@@ -161,14 +165,12 @@
 
   <footer class="footer">
     <div class="container">
-      <div class="footer__inner-wrapper">
-        <a href="./" class="logo logo--white">
-          <span>WEB</span>STUDIO
-        </a>
-        <p class="footer__information">
-          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="./index.html" class="logo logo--white">
+        <span>WEB</span>STUDIO
+      </a>
+      <p class="footer__information">
+        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+      </p>
     </div>
   </footer>
 </body>
