--- a/portfolio.html
+++ b/portfolio.html
@@ -9,42 +9,43 @@
   <title>Web Studio - Portfolio</title>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="header__inner-wrapper">
-        <div class="header__nav">
-          <a href="./" class="logo">
-            <span>WEB</span>STUDIO
-          </a>
-          <nav class="nav">
-            <ul>
-              <li><a href="./">Studio</a></li>
-              <li><a href="./portfolio.html" class="active">Portfolio</a></li>
-              <li><a href="/">Contacts</a></li>
-            </ul>
-          </nav>
-        </div>
-        <address class="contact-information">
+<header class="header">
+  <div class="container header__container">
+    <nav class="nav">
+      <a href="./index.html" class="logo">
+        <span>WEB</span>STUDIO
+      </a>
+      <ul>
+        <li><a href="./index.html">Studio</a></li>
+        <li><a href="./portfolio.html" class="active">Portfolio</a></li>
+        <li><a href="/">Contacts</a></li>
+      </ul>
+    </nav>
+    <address class="contact-information">
+      <ul>
+        <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
           <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </address>
-      </div>
-    </div>
-  </header>
+        </li>
+      </ul>
+    </address>
+  </div>
+</header>
 
   <main class="main">
     <section class="portfolio">
       <div class="container">
-        <h2 class="hidden">Portfolio</h2>
-        <div class="tabs">
-          <ul class="tabs__controls">
-            <li><button class="button button--tabs button--active">All</button></li>
-            <li><button class="button button--tabs">Web Sites</button></li>
-            <li><button class="button button--tabs">App</button></li>
-            <li><button class="button button--tabs">Design</button></li>
-            <li><button class="button button--tabs">Marketing</button></li>
-          </ul>
-          <ul class="tabs__list">
+        <h1 class="hidden">Portfolio</h1>
+        <ul class="tab-controls">
+          <li><button class="button button--tabs button--active">All</button></li>
+          <li><button class="button button--tabs">Web Sites</button></li>
+          <li><button class="button button--tabs">App</button></li>
+          <li><button class="button button--tabs">Design</button></li>
+          <li><button class="button button--tabs">Marketing</button></li>
+        </ul>
+        <ul class="tabs-list">
             <li class="tabs__item">
               <a href="#" class="portfolio__card">
                 <div class="portfolio__image">
@@ -54,7 +55,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Banking App Interface Concept</h3>
+                  <h2>Banking App Interface Concept</h2>
                   <p>App</p>
                 </div>
               </a>
@@ -68,7 +69,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Cashless Payment</h3>
+                  <h2>Cashless Payment</h2>
                   <p>Marketing</p>
                 </div>
               </a>
@@ -82,7 +83,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Meditation App</h3>
+                  <h2>Meditation App</h2>
                   <p>App</p>
                 </div>
               </a>
@@ -96,7 +97,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Taxi Service</h3>
+                  <h2>Taxi Service</h2>
                   <p>Marketing</p>
                 </div>
               </a>
@@ -110,7 +111,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Screen Illustrations</h3>
+                  <h2>Screen Illustrations</h2>
                   <p>Design</p>
                 </div>
               </a>
@@ -124,7 +125,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Online Courses</h3>
+                  <h2>Online Courses</h2>
                   <p>Marketing</p>
                 </div>
               </a>
@@ -138,7 +139,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Instagram Stories Concept</h3>
+                  <h2>Instagram Stories Concept</h2>
                   <p>Design</p>
                 </div>
               </a>
@@ -152,7 +153,7 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Organic Food</h3>
+                  <h2>Organic Food</h2>
                   <p>Web Site</p>
                 </div>
               </a>
@@ -166,27 +167,24 @@
                   </div>
                 </div>
                 <div class="portfolio__information">
-                  <h3>Fresh Coffee</h3>
+                  <h2>Fresh Coffee</h2>
                   <p>Web Site</p>
                 </div>
               </a>
             </li>
           </ul>
-        </div>
       </div>
     </section>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <div class="footer__inner-wrapper">
-        <a href="./" class="logo logo--white">
-          <span>WEB</span>STUDIO
-        </a>
-        <p class="footer__information">
-          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="./index.html" class="logo logo--white">
+        <span>WEB</span>STUDIO
+      </a>
+      <p class="footer__information">
+        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+      </p>
     </div>
   </footer>
 </body>
